<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/startFragment">

    <fragment
        android:id="@+id/startFragment"
        android:name="team.fightcats.englishtrainervector.ui.start.StartFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_start">
        <action
            android:id="@+id/action_startFragment_to_gameFragment"
            app:destination="@id/gameFragment" />
        <action
            android:id="@+id/action_startFragment_to_resultListFragment"
            app:destination="@id/resultListFragment" />
    </fragment>

    <fragment
        android:id="@+id/gameFragment"
        android:name="team.fightcats.englishtrainervector.ui.game.GameFragment"
        android:label="@string/game"
        tools:layout="@layout/fragment_game">
        <action
            android:id="@+id/action_gameFragment_to_resultListFragment"
            app:destination="@id/resultListFragment"
            app:popUpTo="@id/gameFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/resultListFragment"
        android:name="team.fightcats.englishtrainervector.ui.results.ResultListFragment"
        android:label="@string/results"
        tools:layout="@layout/fragment_result_list">
        <action
            android:id="@+id/action_resultListFragment_to_startFragment"
            app:destination="@id/startFragment" />
    </fragment>

</navigation>